2006-12-23  Paul Eggert  <eggert@cs.ucla.edu>

	* zdiff.in: Fix typo that broke most usages.  Problem reported by
	Jari Aalto in <http://bugs.debian.org/404114>.  While we're at it,
	fix a bunch of other problems.  Handle "-" better.  Send
	diagnostics to stderr, not stdout.  Use expr rather than echo |
	sed, to handle special characters better.  Report a diagnostic in
	the 1-arg case, if the argument doesn't end in .gz or the like,
	rather than having incomprehensible behavior.  Do not require that
	the inputs be regular files.  Avoid creating a temporary entirely,
	if /dev/fd works.  If not, then resist denial-of-service attacks
	better, by using mktemp.
	* NEWS: Document this.
	* Makefile.am (gzip.doc.gz): New rule.
	(check-local): Depend on it, and test zdiff for Debian bug 404114.

2006-12-22  Paul Eggert  <eggert@cs.ucla.edu>

	* zdiff.1: Mention that these programs currently understand only
	formats that gzip does.  Problem reported by Jari Aalto in
	<http://bugs.debian.org/404099>.

2006-12-20  Paul Eggert  <eggert@cs.ucla.edu>

	* inflate.c (huft_build): Fix regression that caused gzip to
	refuse to uncompress null input (all zero length codes).  Problem
	reported by Yiorgos Adamopoulos.  This regression was caused by
	the security patch installed 2006-11-20, which in turn came from
	Debian, which in turn apparently came from Thomas Biege of SuSe.

2006-12-15  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS, configure.ac (AC_INIT):
	Version 1.3.9 released.

	* Makefile.am (MOSTLYCLEANFILES): Add _match.i.
	* configure.ac (for an assembler syntax supported by this package):
	Remove _match.i.

	* bootstrap (gnulib_tool_options_extras): New var.
	(gnulib_tool_options): Use it.
	* bootstrap.conf (gnulib_tool_options_extras): Avoid getline and
	rpmatch.  gzip doesn't need them, since it doesn't ENABLE_NLS.

2006-12-13  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Use $CPPFLAGS everywhere $CPP is used, and use
	$CPPFLAGS $CFLAGS everywhere $CC is used.