@@ -2,6 +2,9 @@ Gzip 1.3.10 (200?-??-??)
 
 * zcmp and zdiff did not work in the usual case, due to a typo.
 
+* gzip -c and zcat now work on special files, files with special mode bits,
+  and files with multiple hard links.
+
 Gzip 1.3.9 (2006-12-15)
 
 * No major changes; only porting fixes.
